compatibility-tests/compile-fail/tests/ui/attribute-misuse.stderr
error: `display` attribute is only valid on enum variants or structs with named fields, not on an enum
 --> tests/ui/attribute-misuse.rs:5:13
  |
5 |     #[snafu(display("display should not work here"))]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `source(from)` attribute is only valid on enum variant or struct fields with a name, not on an enum
 --> tests/ui/attribute-misuse.rs:6:13
  |
6 |     #[snafu(source(from(XXXX, Box::new)))]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `source(bool)` attribute is only valid on enum variant or struct fields with a name, not on an enum
 --> tests/ui/attribute-misuse.rs:7:13
  |
7 |     #[snafu(source(true))]
  |             ^^^^^^^^^^^^

error: `backtrace` attribute is only valid on enum variant or struct fields with a name, not on an enum
 --> tests/ui/attribute-misuse.rs:8:13
  |
8 |     #[snafu(backtrace)]
  |             ^^^^^^^^^

error: `context(bool)` attribute is only valid on enum variants or structs with named fields, not on an enum
 --> tests/ui/attribute-misuse.rs:9:13
  |
9 |     #[snafu(context)]
  |             ^^^^^^^

error: `implicit` attribute is only valid on enum variant or struct fields with a name, not on an enum
  --> tests/ui/attribute-misuse.rs:10:13
   |
10 |     #[snafu(implicit)]
   |             ^^^^^^^^

error: `provide` attribute is only valid on enum variant or struct fields with a name, not on an enum
  --> tests/ui/attribute-misuse.rs:11:13
   |
11 |     #[snafu(provide)]
   |             ^^^^^^^

error: `provide(type => expression)` attribute is only valid on enum variants, structs with named fields, or tuple structs, not on an enum
  --> tests/ui/attribute-misuse.rs:12:13
   |
12 |     #[snafu(provide(u8 => 0))]
   |             ^^^^^^^^^^^^^^^^

error: `transparent` attribute is only valid on enum variants or structs with named fields, not on an enum
  --> tests/ui/attribute-misuse.rs:13:13
   |
13 |     #[snafu(transparent)]
   |             ^^^^^^^^^^^

error: `source` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:25:46
   |
25 |         #[snafu(display("an error variant"), source(from(XXXX, Box::new)))]
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `source` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:26:17
   |
26 |         #[snafu(source)]
   |                 ^^^^^^

error: `backtrace` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:27:17
   |
27 |         #[snafu(backtrace)]
   |                 ^^^^^^^^^

error: `crate_root` attribute is only valid on an enum or a struct, not on an enum variant
  --> tests/ui/attribute-misuse.rs:28:17
   |
28 |         #[snafu(crate_root(XXXX))]
   |                 ^^^^^^^^^^^^^^^^

error: `implicit` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:29:17
   |
29 |         #[snafu(implicit)]
   |                 ^^^^^^^^

error: `provide` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:30:17
   |
30 |         #[snafu(provide)]
   |                 ^^^^^^^

error: `display` attribute is only valid on enum variants or structs with named fields, not on a field
  --> tests/ui/attribute-misuse.rs:41:21
   |
41 |             #[snafu(display("display should not work here"))]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `visibility` attribute is only valid on an enum, enum variants, or a struct with named fields, not on a field
  --> tests/ui/attribute-misuse.rs:42:21
   |
42 |             #[snafu(visibility(pub))]
   |                     ^^^^^^^^^^^^^^^

error: Incompatible attributes [`source(false)`, `source(from)`] specified on a field
  --> tests/ui/attribute-misuse.rs:44:21
   |
44 |             #[snafu(source(from(XXXX, Box::new)))]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `context` attribute is only valid on enum variants or structs with named fields, not on a field
  --> tests/ui/attribute-misuse.rs:45:21
   |
45 |             #[snafu(context)]
   |                     ^^^^^^^

error: `crate_root` attribute is only valid on an enum or a struct, not on a field
  --> tests/ui/attribute-misuse.rs:46:21
   |
46 |             #[snafu(crate_root(XXXX))]
   |                     ^^^^^^^^^^^^^^^^

error: `transparent` attribute is only valid on enum variants or structs with named fields, not on a field
  --> tests/ui/attribute-misuse.rs:47:21
   |
47 |             #[snafu(transparent)]
   |                     ^^^^^^^^^^^

error: `provide(false)` attribute is only valid on a field named "source" or "backtrace", not on other fields
  --> tests/ui/attribute-misuse.rs:50:21
   |
50 |             #[snafu(provide(false))]
   |                     ^^^^^^^^^^^^^^

error: `provide(type => expression)` attribute is only valid on enum variants, structs with named fields, or tuple structs, not on a field
  --> tests/ui/attribute-misuse.rs:51:21
   |
51 |             #[snafu(provide(u8 => 0))]
   |                     ^^^^^^^^^^^^^^^^

error: `display` attribute is only valid on enum variants or structs with named fields, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:64:13
   |
64 |     #[snafu(display("display should not work here"))]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `visibility` attribute is only valid on an enum, enum variants, or a struct with named fields, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:66:13
   |
66 |     #[snafu(visibility(pub))]
   |             ^^^^^^^^^^^^^^^

error: `source(bool)` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:67:13
   |
67 |     #[snafu(source(true))]
   |             ^^^^^^^^^^^^

error: `backtrace` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:68:13
   |
68 |     #[snafu(backtrace)]
   |             ^^^^^^^^^

error: `context` attribute is only valid on enum variants or structs with named fields, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:69:13
   |
69 |     #[snafu(context)]
   |             ^^^^^^^

error: `implicit` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:70:13
   |
70 |     #[snafu(implicit)]
   |             ^^^^^^^^

error: `provide` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:71:13
   |
71 |     #[snafu(provide)]
   |             ^^^^^^^

error: `transparent` attribute is only valid on enum variants or structs with named fields, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:73:13
   |
73 |     #[snafu(transparent)]
   |             ^^^^^^^^^^^

error: `backtrace` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:81:21
   |
81 |             #[snafu(backtrace)]
   |                     ^^^^^^^^^

error: `context` attribute is only valid on enum variants or structs with named fields, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:82:21
   |
82 |             #[snafu(context)]
   |                     ^^^^^^^

error: `crate_root` attribute is only valid on an enum or a struct, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:83:21
   |
83 |             #[snafu(crate_root(nowhere))]
   |                     ^^^^^^^^^^^^^^^^^^^

error: `display` attribute is only valid on enum variants or structs with named fields, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:84:21
   |
84 |             #[snafu(display("display should not work here"))]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `implicit` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:85:21
   |
85 |             #[snafu(implicit)]
   |                     ^^^^^^^^

error: `module` attribute is only valid on an enum or structs with named fields, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:86:21
   |
86 |             #[snafu(module)]
   |                     ^^^^^^

error: `provide` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:87:21
   |
87 |             #[snafu(provide)]
   |                     ^^^^^^^

error: `source` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:88:21
   |
88 |             #[snafu(source)]
   |                     ^^^^^^

error: `transparent` attribute is only valid on enum variants or structs with named fields, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:89:21
   |
89 |             #[snafu(transparent)]
   |                     ^^^^^^^^^^^

error: `visibility` attribute is only valid on an enum, enum variants, or a struct with named fields, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:90:21
   |
90 |             #[snafu(visibility(pub))]
   |                     ^^^^^^^^^^^^^^^

error: `whatever` attribute is only valid on enum variants or structs with named fields, not on a tuple struct field
  --> tests/ui/attribute-misuse.rs:91:21
   |
91 |             #[snafu(whatever)]
   |                     ^^^^^^^^
